[Commerce] QA bugs for dropdown and horizontal scrolling
* Reset default select styling with appearance:none (vendor prefixes
added on build)
* Adjust size of hr in footer causing horizontal scrolling on mobile

--- a/css/templates/e-commerce/page.css
+++ b/css/templates/e-commerce/page.css
@@ -127,7 +127,7 @@ dd:after {
 }
 
 .commerce-select {
-  -webkit-appearance: none;
+  appearance: none;
   border: none;
   border-radius: 0;
   background: none;
@@ -622,6 +622,8 @@ amp-carousel {
 
 .commerce-footer hr {
   background-color: #4a4a4a;
+  margin: 0;
+  width: 100%;
 }
 
 .commerce-footer nav {
